--- a/3. 파일 추적 및 무시 설정.md
+++ b/3. 파일 추적 및 무시 설정.md
@@ -65,7 +65,7 @@ __pycache__/
 ### ✅ 4. 예외 처리 문법 (`!`)
 
 `.gitignore`에 포함된 디렉토리나 패턴에서도,
- **특정 파일만 추적하고 싶다면** `!`로 예외를 걸 수 있어.
+ **특정 파일만 추적하고 싶다면** `!`로 예외를 걸 수 있다.
 
 ```
 # 모든 .env 파일 무시
@@ -118,7 +118,7 @@ Thumbs.db
 ### ✅ 7. 이미 추적된 파일은 무시되지 않음
 
 **중요 주의사항**
- `.gitignore`은 **Git이 아직 추적하지 않은 파일**에만 적용돼.
+ `.gitignore`은 **Git이 아직 추적하지 않은 파일**에만 적용된다.
 
 이미 커밋한 파일을 무시하려면:
 
@@ -202,7 +202,7 @@ target/
 ### ✅ 2. 그래서 `.gitkeep`이 필요하다
 
 > **`.gitkeep`은 비어 있는 디렉토리를 Git에 포함시키기 위해 사용하는 ***사실상 아무 의미 없는\*** 파일이다.
->  이름은 `git`이 요구하는 건 아니며, 그냥 **관례적인 이름일 뿐**이야.
+>  이름은 `git`이 요구하는 건 아니며, 그냥 **관례적인 이름일 뿐**이다.
 
 #### 🔸 주요 사용 예시:
 
@@ -233,7 +233,7 @@ git commit -m "chore: keep uploads directory"
 
 - 사실 `.gitkeep`은 **필수 이름이 아님**
 - 그냥 `keep.txt`나 `README.md`처럼 아무 파일이나 넣어도 Git은 폴더를 추적함
-- 하지만 커뮤니티에서는 `.gitkeep`을 **암묵적 표준**으로 받아들이고 있어
+- 하지만 커뮤니티에서는 `.gitkeep`을 **암묵적 표준**으로 받아들이고 있다.
 
 ------
 
@@ -343,7 +343,7 @@ git rm --cached .env
 git commit -m "Remove .env from tracking"
 ```
 
-> `.gitignore`에 추가할 경우, 추적을 중지하고 다시 커밋되지 않게 막을 수 있어
+> `.gitignore`에 추가할 경우, 추적을 중지하고 다시 커밋되지 않게 막을 수 있다.
 
 ------
 
@@ -357,7 +357,7 @@ git commit -m "Remove .env from tracking"
 git mv old-name.txt new-name.txt
 ```
 
-> 이 명령은 실제 파일을 이동시키고, 동시에 Git에게 **"이건 새 파일이 아니라 이동이야"** 라고 알려줘
+> 이 명령은 실제 파일을 이동시키고, 동시에 Git에게 **"이건 새 파일이 아니라 이동이야"** 라고 알려준다.
 
 #### 예시
 
@@ -366,7 +366,7 @@ git mv src/Login.js src/pages/LoginPage.js
 git commit -m "refactor: move Login.js to pages/"
 ```
 
-> Git은 자동으로 rename을 감지하지만, `git mv`를 쓰면 명시적으로 관리 가능하고 히스토리 추적에 유리해
+> Git은 자동으로 rename을 감지하지만, `git mv`를 쓰면 명시적으로 관리 가능하고 히스토리 추적에 유리하다.
 
 ------
 
@@ -412,7 +412,7 @@ git commit -m "refactor: rename old.js to NewComponent.js"
 
 ### ✅ 1. 문제 상황: Git이 대소문자 변경을 감지하지 않음
 
-### 예시:
+#### 예시:
 
 ```
 mv logo.png Logo.png
@@ -428,7 +428,7 @@ git status
 ### ✅ 2. 원인: `core.ignorecase = true`
 
 - `core.ignorecase`는 Git의 내부 설정으로,
-   **파일 이름의 대소문자를 무시할지 여부를 결정**하는 옵션이야
+   **파일 이름의 대소문자를 무시할지 여부를 결정**하는 옵션이다.
 - 기본값:
   - **Windows, macOS(HFS+)** → `true`
   - **Linux(ext4 등)** → `false`
