--- a/4. 브랜치와 병합.md
+++ b/4. 브랜치와 병합.md
@@ -334,7 +334,7 @@ git push origin main
 > **두 브랜치에서 동일한 파일의 동일한 라인**을 서로 다르게 수정한 경우,
 >  Git은 자동 병합을 하지 못하고 충돌을 발생시킴.
 
-> 즉, **Git이 무엇을 선택해야 할지 판단할 수 없는 상황**이야.
+> 즉, **Git이 무엇을 선택해야 할지 판단할 수 없는 상황**이다.
 
 ------
 
