--- a/6. 원격 저장소(GitHub 등) 연동.md
+++ b/6. 원격 저장소(GitHub 등) 연동.md
@@ -8,8 +8,8 @@
 
 ### ✅ 1. `git remote` 개요
 
-Git은 **로컬 저장소**와 **원격 저장소**(예: GitHub, GitLab 등)를 연결해 협업할 수 있어.
- `git remote`는 이 **연결된 원격 저장소 목록을 관리하는 명령어**야.
+Git은 **로컬 저장소**와 **원격 저장소**(예: GitHub, GitLab 등)를 연결해 협업할 수 있다.
+ `git remote`는 이 **연결된 원격 저장소 목록을 관리하는 명령어**이다.
 
 ------
 
