--- a/7. GitHub의 핵심 기능.md
+++ b/7. GitHub의 핵심 기능.md
@@ -512,7 +512,7 @@ touch LICENSE
 ### ✅ 1. Pull Request(Pull 요청)란?
 
 > **Pull Request (PR)** 는 브랜치에서 작업한 내용을
->  **메인 브랜치(또는 다른 브랜치)**에 병합해달라고 요청하는 GitHub 기능이야.
+>  **메인 브랜치(또는 다른 브랜치)**에 병합해달라고 요청하는 GitHub 기능이다.
 
 💡 “변경사항을 병합해주세요!” 라는 공식적 요청이자,
  **리뷰 → 승인 → 병합(Merge)** 과정을 포함하는 협업 절차임.
@@ -576,7 +576,7 @@ git push origin feature/login
 
 - 리뷰가 완료되면 PR 페이지에서 [Merge pull request] 클릭
 
-### 병합 옵션
+#### 병합 옵션
 
 | 옵션                      | 설명                          |
 | ------------------------- | ----------------------------- |
@@ -946,4 +946,4 @@ GitHub Actions는 **별도 서버 없이**,
  **GitHub 안에서 바로 자동화**를 시작할 수 있다는 점에서
  ✅ 배우기 쉽고
  ✅ 확장성이 높고
- ✅ 오픈소스에 특히 강력한 CI/CD 솔루션이야.
+ ✅ 오픈소스에 특히 강력한 CI/CD 솔루션이다.
