--- a/8. 협업 워크플로우.md
+++ b/8. 협업 워크플로우.md
@@ -7,7 +7,7 @@
 > **Vincent Driessen**이 제안한 Git 브랜치 전략으로,
 >  기능 개발, 테스트, 릴리즈, 유지보수 등을 **명확하게 분리된 브랜치**로 관리하는 워크플로우.
 
-✅ 대규모 협업과 릴리즈 주기가 명확한 프로젝트에 적합
+ ✅ 대규모 협업과 릴리즈 주기가 명확한 프로젝트에 적합
  ✅ 안정성 유지와 병렬 작업에 강함
 
 ------
@@ -115,7 +115,7 @@ git merge hotfix/crash-fix
 
 ### ✅ 5. Git Flow 도구 지원
 
-자동화된 Git Flow 명령어도 존재해:
+자동화된 Git Flow 명령어도 존재한다:
 
 ```
 brew install git-flow
@@ -172,7 +172,7 @@ git flow release finish 1.0.0
 
 ## GitHub Flow 전략
 
-## ✅ 1. GitHub Flow란?
+### ✅ 1. GitHub Flow란?
 
 > GitHub에서 오픈소스 및 웹 서비스를 위한 **민첩한 개발 워크플로우**로 제안한 전략
 >  단 하나의 **`main` 브랜치**를 중심으로,
@@ -180,7 +180,7 @@ git flow release finish 1.0.0
 
 ------
 
-## ✅ 2. 핵심 원칙 요약
+### ✅ 2. 핵심 원칙 요약
 
 | 원칙                                         | 설명 |
 | -------------------------------------------- | ---- |
@@ -190,14 +190,12 @@ git flow release finish 1.0.0
 | PR 병합은 **자동 테스트 통과 후**            |      |
 | 병합되면 자동 또는 수동으로 **배포 트리거**  |      |
 
-
-
 ------
 
-## ✅ 3. 브랜치 흐름 구조
+### ✅ 3. 브랜치 흐름 구조
 
 ```
-plaintext코드 복사main  ← 배포 가능한 최신 코드
+main  ← 배포 가능한 최신 코드
   ↑
  Pull Request
   ↑
@@ -206,40 +204,36 @@ feature/login ← 기능 브랜치 (로컬 또는 Fork)
 
 ------
 
-## ✅ 4. 실전 워크플로우
+### ✅ 4. 실전 워크플로우
 
-### 🔹 Step 1. 브랜치 생성
+#### 🔹 Step 1. 브랜치 생성
 
 ```
-bash
-
-
-코드 복사
 git checkout -b feature/login
 ```
 
-### 🔹 Step 2. 작업 & 커밋
+#### 🔹 Step 2. 작업 & 커밋
 
 ```
-bash코드 복사git add .
+git add .
 git commit -m "feat: 로그인 UI 추가"
 git push origin feature/login
 ```
 
-### 🔹 Step 3. Pull Request 생성
+#### 🔹 Step 3. Pull Request 생성
 
 - GitHub에서 PR 생성
 - Base: `main`, Compare: `feature/login`
 - 코드 리뷰 & 자동 테스트 수행
 
-### 🔹 Step 4. Merge 후 배포
+#### 🔹 Step 4. Merge 후 배포
 
 - 리뷰 승인 & 테스트 통과 → Merge
 - 병합되면 자동 배포 시스템 (CI/CD) 작동
 
 ------
 
-## ✅ 5. GitHub Flow vs Git Flow
+### ✅ 5. GitHub Flow vs Git Flow
 
 | 항목        | GitHub Flow              | Git Flow                                      |
 | ----------- | ------------------------ | --------------------------------------------- |
@@ -248,23 +242,21 @@ git push origin feature/login
 | 적합 대상   | 웹서비스, 스타트업       | 제품 릴리즈 중심 소프트웨어                   |
 | 자동화 연계 | 강제됨 (CI/CD 필요)      | 수동 배포도 가능                              |
 
-
-
 ------
 
-## ✅ 6. GitHub Flow에 적합한 프로젝트
+### ✅ 6. GitHub Flow에 적합한 프로젝트
 
-✅ 웹 기반 SaaS
+ ✅ 웹 기반 SaaS
  ✅ 지속 배포(Continuous Deployment)를 추구하는 팀
  ✅ 협업이 빠르고 리뷰가 짧은 조직
  ✅ 자동화 테스트가 잘 갖춰진 환경
 
 ------
 
-## ✅ 7. 예시 PR 구조
+### ✅ 7. 예시 PR 구조
 
 ```
-markdown코드 복사# feat: 회원가입 기능 추가
+# feat: 회원가입 기능 추가
 
 ## ✅ 변경 사항
 - 이메일/비밀번호 폼 추가
@@ -280,12 +272,12 @@ Fixes #23
 
 ------
 
-## ✅ 8. GitHub Actions + GitHub Flow
+### ✅ 8. GitHub Actions + GitHub Flow
 
 - `main` 브랜치로 병합되면 자동으로 Actions가 실행됨:
 
 ```
-yaml코드 복사on:
+on:
   push:
     branches: [main]
 ```
@@ -294,7 +286,7 @@ yaml코드 복사on:
 
 ------
 
-## ✅ 요약 비교표
+### ✅ 요약 비교표
 
 | 요소        | GitHub Flow 특징             |
 | ----------- | ---------------------------- |
@@ -607,7 +599,7 @@ git push origin fix/docs
 Fork 기반 전략은
  ✅ 기여자에게 자유로운 개발 공간을 주고,
  ✅ 코드베이스의 안전성을 유지할 수 있어서
- **오픈소스 기여의 표준 전략**으로 널리 사용돼.
+ **오픈소스 기여의 표준 전략**으로 널리 사용된다.
 
 ## Feature 브랜치 전략
 
@@ -777,7 +769,7 @@ git push origin --delete feature/login
 ------
 
 Feature 브랜치 전략은 **모든 Git 브랜치 전략의 기반**이고,
- 단순하지만 강력한 구조를 가진 **모던 소프트웨어 개발의 기본 흐름**이야.
+ 단순하지만 강력한 구조를 가진 **모던 소프트웨어 개발의 기본 흐름**이다.
 
 ## Pull Request + 코드 리뷰 프로세스
 
