--- a/9. 태그와 릴리즈.md
+++ b/9. 태그와 릴리즈.md
@@ -2,7 +2,7 @@
 
 ## 버전 태그 달기 (`git tag`)
 
-###  1. 태그(Tag)란?
+###  ✅1. 태그(Tag)란?
 
 > 특정 커밋(commit)에 **버전 이름(스냅샷 라벨)** 을 붙여서
 >  그 시점을 **고정된 기준점**으로 삼는 기능.
