--- a/2. 기본 Git 명령어.md
+++ b/2. 기본 Git 명령어.md
@@ -4,8 +4,8 @@
 
 ### ✅ 1. 저장소(Repository)란?
 
-> Git에서 저장소(Repository)란 **프로젝트의 전체 변경 이력(history)** 을 저장하는 공간이야.
->  `.git` 디렉토리가 생성되면 그 폴더는 Git 저장소가 돼.
+> Git에서 저장소(Repository)란 **프로젝트의 전체 변경 이력(history)** 을 저장하는 공간이다.
+>  `.git` 디렉토리가 생성되면 그 폴더는 Git 저장소가 된다.
 
 - ## `git init`, `git clone`
 
@@ -88,7 +88,7 @@
 
   ### ✅ 5. 원격 저장소를 수동으로 추가하려면?
 
-  `git init`으로 만든 저장소에 GitHub와 같은 원격 저장소를 수동으로 연결할 수도 있어:
+  `git init`으로 만든 저장소에 GitHub와 같은 원격 저장소를 수동으로 연결할 수도 있다:
 
   ```
   git remote add origin https://github.com/yourname/project.git
@@ -275,7 +275,7 @@ Git은 다음의 **3단계 구조**로 이루어져 있다:
 
   ### ✅ 6. 커밋 메시지 작성 팁
 
-  좋은 커밋 메시지는 협업에 큰 도움이 돼.
+  좋은 커밋 메시지는 협업에 큰 도움이 된다.
 
   #### 🔹 기본 형식
 
@@ -418,7 +418,7 @@ Git은 다음의 **3단계 구조**로 이루어져 있다:
 
   ### ✅ 5. scope (선택)
 
-  > 변경 대상이 특정 모듈/컴포넌트인 경우 괄호로 범위를 명시할 수 있어
+  > 변경 대상이 특정 모듈/컴포넌트인 경우 괄호로 범위를 명시할 수 있다
 
   ```
   feat(login): remember-me 기능 추가
@@ -624,7 +624,7 @@ Git은 다음의 **3단계 구조**로 이루어져 있다:
   git blame <파일명>
   ```
 
-  ### 🔹 예시
+  #### 🔹 예시
 
   ```
   ^7b9f83 (ohjeongseok 2025-05-29 14:05:01 +0900  1) import React from 'react';
@@ -730,7 +730,7 @@ git log --oneline --graph --all --decorate
 
 ```
 * 87c02a5 (HEAD -> main, origin/main) feat: 로그인 스타일 수정
-| * 223a7f9 (feature/login) feat: 로그인 상태 저장
+|  * 223a7f9 (feature/login) feat: 로그인 상태 저장
 |/
 * 65ab3de fix: 로그인 오류 해결
 ```
@@ -941,7 +941,7 @@ git log --since="1 week ago" --grep="^feat"
 
   ```
   * 87c02a5 (HEAD -> main) feat: 로그인 스타일 수정
-  | * 223a7f9 (feature/login) feat: 로그인 상태 저장
+  |  * 223a7f9 (feature/login) feat: 로그인 상태 저장
   |/
   * 65ab3de fix: 로그인 오류 해결
   * 34c2a71 init: 프로젝트 생성
