--- a/5. Rebase와 히스토리 조작.md
+++ b/5. Rebase와 히스토리 조작.md
@@ -5,7 +5,7 @@
 ### ✅ 1. 개념 정의
 
 > `git rebase`는 **특정 브랜치의 커밋들을 다른 브랜치의 최신 커밋 이후에 다시 적용**하는 것.
->  즉, **브랜치의 시작점을 새롭게 바꾸는 것**이야.
+>  즉, **브랜치의 시작점을 새롭게 바꾸는 것**이다.
 
 ```
 기존 히스토리
@@ -274,7 +274,7 @@ git rebase -i HEAD~3
 
 ### ✅ 1. 기본 개념
 
-> `git rebase -i`는 선택한 커밋 범위를 **인터랙티브하게 조작**하여 커밋 히스토리를 깔끔하게 정리할 수 있는 명령어야.
+> `git rebase -i`는 선택한 커밋 범위를 **인터랙티브하게 조작**하여 커밋 히스토리를 깔끔하게 정리할 수 있는 명령어이다.
 
 ```
 git rebase -i HEAD~n
@@ -488,7 +488,7 @@ git commit --amend
 ```
 
 - 텍스트 편집기가 열리며, 메시지를 수정할 수 있음
-- 기존 커밋을 그대로 덮어쓴다
+- 기존 커밋을 그대로 덮어쓴다.
 
 > 📌 커밋 해시가 바뀌므로 **push한 커밋을 amend하면 강제 push 필요**
 
@@ -585,7 +585,7 @@ git reset [<mode>] <commit>
 - `<mode>`는 `--soft`, `--mixed`(기본값), `--hard`
 - `<commit>`은 되돌리고 싶은 커밋의 해시(또는 HEAD~1 등)
 
-> 💡 `git reset`은 총 **세 가지 대상**에 영향을 줄 수 있어:
+> 💡 `git reset`은 총 **세 가지 대상**에 영향을 줄 수 있다:
 
 - **HEAD** (브랜치 포인터)
 - **Index (Staging Area)** — `git add`된 상태
@@ -774,7 +774,7 @@ bd234ab HEAD@{3}: commit: feat: login API 추가
 git reset --hard HEAD~1
 ```
 
-😱 실수로 중요한 커밋 날렸다고 해보자.
+실수로 중요한 커밋 날렸다고 해보자.
 
 #### 🔄 복구 단계
 
@@ -796,7 +796,7 @@ git checkout bd234ab
 git checkout -b recover-login-api
 ```
 
-→ 날린 커밋 복구 완료 🎉
+→ 날린 커밋 복구 완료
 
 ------
 
